[package]
name = "dotfiles_actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotfiles_core = {path = "../dotfiles_core"}
dotfiles_core_macros = {path = "../dotfiles_core_macros"}
filesystem = { git = "https://github.com/miguelandres/filesystem-rs" }
log = "0.4.14"
reqwest = { version = "0.11", features = ["json", "blocking"] }
subprocess = "0.2.8"
tempfile = "3.2.0"
yaml-rust = "0.4.5"
