[package]
name = "dotfiles_actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
dotfiles_core = {path = "../dotfiles_core"}
dotfiles_core_macros = {path = "../dotfiles_core_macros"}
filesystem = { git = "https://github.com/miguelandres/filesystem-rs" }
getset = "0.1.2"
log = "0.4.14"
strict-yaml-rust = "0.1.2"
subprocess = "0.2.8"
