[package]
name = "dotfiles_processor"
version = "0.10.0"
authors = ["Miguel Barreto <miguelandres@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = {version ="4.0.13", features = ["derive"]}
getset = "0.1.2"
dotfiles_core = {path = "../dotfiles_core"}
dotfiles_actions = {path = "../dotfiles_actions"}
log = "0.4.14"
itertools = "0.10.1"
strict-yaml-rust = "0.1.2"
