[package]
name = "dotfiles_processor"
version = "1.0.0"
authors = ["Miguel Barreto <miguelandres@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
dotfiles_core = { path = "../dotfiles_core" }
dotfiles_actions = { path = "../dotfiles_actions" }
getset = "0.1.2"
itertools = "0.12.0"
log = "0.4.14"
once_cell = "1.17.1"
strict-yaml-rust = "0.1.2"
