[package]
name = "rustybot_core"
version = "0.1.0"
authors = ["Miguel Barreto <miguelandres@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesystem = { git = "ssh://git@github.com/miguelandres/filesystem-rs.git" }
log = "0.4.14"
yaml-rust = "0.4.5"
