[package]
name = "rustybot_core"
version = "0.1.0"
authors = ["Miguel Barreto <miguelandres@users.noreply.github.com>"]
edition = "2018"

[dependencies]
filesystem = { git = "https://github.com/miguelandres/filesystem-rs" }
log = "0.4.14"
reqwest = { version = "0.11", features = ["json", "blocking"] }
subprocess = "0.2.8"
tempfile = "3.2.0"
yaml-rust = "0.4.5"
